--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,2 +1,30 @@
 html {background-color: black;
 text-align: center;}
+
+span {text-align: center;}
+
+.title {font-family: Verdana, Geneva, Tahoma, sans-serif;
+font-weight: normal;
+font-size: 50px;
+color: white;
+text-align:center;}
+
+.app_link a {color:aquamarine;
+    text-decoration-line: underline;
+}
+
+#phone_video span {text-align: center;}
+
+.section_title {font-family: Verdana, Geneva, Tahoma, sans-serif;
+font-weight: 300;
+font-size: 42px;
+color: white;}
+
+#features h3 {font-family:Verdana, Geneva, Tahoma, sans-serif;
+font-size: 21px;
+color: Gray;}
+
+#info span img {padding-top: 15px;}
+
+#copyright p {text-align: right;
+color: gray;}
